--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/W3Layouts/gatsby-starter-delog/issues"
   },
   "dependencies": {
-    "gatsby": "^2.21.0",
+    "gatsby": "^2.24.2",
     "gatsby-plugin-dark-mode": "^1.1.1",
     "gatsby-plugin-google-analytics": "^2.1.36",
     "gatsby-plugin-manifest": "^2.4.1",
@@ -22,14 +22,19 @@
     "gatsby-source-filesystem": "^2.1.48",
     "gatsby-transformer-remark": "^2.6.53",
     "netlify-cms-app": "^2.11.13",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.0",
     "prismjs": "^1.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "@reach/router": "^1.3.3",
+    "codemirror": "^5.46.0",
+    "prettier": "^1.19.1",
+    "redux": "^4.0.0",
+    "seamless-immutable": "^7.1.3",
+    "typescript": "^4.0.5"
   },
   "homepage": "https://github.com/W3Layouts/gatsby-starter-delog#readme",
   "keywords": [
