--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/W3Layouts/gatsby-starter-delog/issues"
   },
   "dependencies": {
+    "@types/react-helmet": "^6.1.0",
     "gatsby": "^2.24.2",
     "gatsby-plugin-dark-mode": "^1.1.1",
     "gatsby-plugin-google-analytics": "^2.1.36",
@@ -29,6 +30,7 @@
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.19.1",
     "@reach/router": "^1.3.4",
     "codemirror": "^5.58.2",
     "prettier": "^1.19.1",
