--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -60,6 +60,10 @@ collections:
         widget: string
         pattern: ['/', "Path must start with '/'."]
         hint: "Path must start with /"
+      - name: tags
+        label: Tags
+        widget: string 
+        required: false
       - { name: date, label: Date, widget: datetime }
       - { name: title, label: Title }
       - label: Meta Description
